--- a/tachyons.css
+++ b/tachyons.css
@@ -23,21 +23,21 @@
  */
 /* External Library Includes */
 .bg-blue { background-color: #4b71fc; }
-.bg-blue-80 { background-color: #708fff; }
-.bg-blue-60 { background-color: #91a9ff; }
-.bg-blue-40 { background-color: #bdccff; }
-.bg-blue-20 { background-color: #eaefff; }
-.bg-navy { background-color: #212e5f; }
-.bg-navy-80 { background-color: #7b83a1; }
-.bg-navy-60 { background-color: #9fa6bf; }
-.bg-navy-40 { background-color: #d7dbe7; }
-.bg-navy-20 { background-color: #eff1f9; }
-.bg-green { background-color: #39b54a; }
-.bg-green-light { background-color: #e6ffea; }
+.bg-blue-80 { background-color: #6f8dfd; }
+.bg-blue-60 { background-color: #93aafd; }
+.bg-blue-40 { background-color: #b7c6fe; }
+.bg-blue-20 { background-color: #dbe3fe; }
+.bg-navy { background-color: #545a70; }
+.bg-navy-80 { background-color: #767b8d; }
+.bg-navy-60 { background-color: #989ca9; }
+.bg-navy-40 { background-color: #bbbdc6; }
+.bg-navy-20 { background-color: #dddee2; }
+.bg-green { background-color: #7ed321; }
+.bg-green-light { background-color: #f8fdf4; }
 .bg-yellow { background-color: #ffa721; }
-.bg-yellow-light { background-color: #fff7e4; }
+.bg-yellow-light { background-color: #fffaf4; }
 .bg-red { background-color: #ff3d44; }
-.bg-red-light { background-color: #ffe8e8; }
+.bg-red-light { background-color: #fff5f5; }
 .bg-black { background-color: #000; }
 .bg-white { background-color: #fff; }
 .bg-black-20 { background-color: rgba( 0, 0, 0, .20 ); }
@@ -52,21 +52,21 @@
 .bg-white-90 { background-color: rgba( 255, 255, 255, .90 ); }
 .bg-transparent { background-color: transparent; }
 .b--blue { border-color: #4b71fc; }
-.b--blue-80 { border-color: #708fff; }
-.b--blue-60 { border-color: #91a9ff; }
-.b--blue-40 { border-color: #bdccff; }
-.b--blue-20 { border-color: #eaefff; }
-.b--navy { border-color: #212e5f; }
-.b--navy-80 { border-color: #7b83a1; }
-.b--navy-60 { border-color: #9fa6bf; }
-.b--navy-40 { border-color: #d7dbe7; }
-.b--navy-20 { border-color: #eff1f9; }
-.b--green { border-color: #39b54a; }
-.b--green-light { border-color: #e6ffea; }
+.b--blue-80 { border-color: #6f8dfd; }
+.b--blue-60 { border-color: #93aafd; }
+.b--blue-40 { border-color: #b7c6fe; }
+.b--blue-20 { border-color: #dbe3fe; }
+.b--navy { border-color: #545a70; }
+.b--navy-80 { border-color: #767b8d; }
+.b--navy-60 { border-color: #989ca9; }
+.b--navy-40 { border-color: #bbbdc6; }
+.b--navy-20 { border-color: #dddee2; }
+.b--green { border-color: #7ed321; }
+.b--green-light { border-color: #f8fdf4; }
 .b--yellow { border-color: #ffa721; }
-.b--yellow-light { border-color: #fff7e4; }
+.b--yellow-light { border-color: #fffaf4; }
 .b--red { border-color: #ff3d44; }
-.b--red-light { border-color: #ffe8e8; }
+.b--red-light { border-color: #fff5f5; }
 .b--black { border-color: #000; }
 .b--white { border-color: #fff; }
 .b--black-20 { border-color: rgba( 0, 0, 0, .20 ); }
@@ -84,21 +84,21 @@
 .shadow-2 { box-shadow: 0 0 10px 2px rgba( 31, 46, 95, .08 ); }
 .shadow-3 { box-shadow: -5px 0 30px 0 rgba( 31, 46, 95, .08 ); }
 .blue { color: #4b71fc; }
-.blue-80 { color: #708fff; }
-.blue-60 { color: #91a9ff; }
-.blue-40 { color: #bdccff; }
-.blue-20 { color: #eaefff; }
-.navy { color: #212e5f; }
-.navy-80 { color: #7b83a1; }
-.navy-60 { color: #9fa6bf; }
-.navy-40 { color: #d7dbe7; }
-.navy-20 { color: #eff1f9; }
-.green { color: #39b54a; }
-.green-light { color: #e6ffea; }
+.blue-80 { color: #6f8dfd; }
+.blue-60 { color: #93aafd; }
+.blue-40 { color: #b7c6fe; }
+.blue-20 { color: #dbe3fe; }
+.navy { color: #545a70; }
+.navy-80 { color: #767b8d; }
+.navy-60 { color: #989ca9; }
+.navy-40 { color: #bbbdc6; }
+.navy-20 { color: #dddee2; }
+.green { color: #7ed321; }
+.green-light { color: #f8fdf4; }
 .yellow { color: #ffa721; }
-.yellow-light { color: #fff7e4; }
+.yellow-light { color: #fffaf4; }
 .red { color: #ff3d44; }
-.red-light { color: #ffe8e8; }
+.red-light { color: #fff5f5; }
 .black { color: #000; }
 .white { color: #fff; }
 .black-20 { color: rgba( 0, 0, 0, .20 ); }
@@ -553,21 +553,21 @@
 .g-h14 { height: 8rem; }
 .g-h15 { height: 16rem; }
 .bg-blue { background-color: #4b71fc; }
-.bg-blue-80 { background-color: #708fff; }
-.bg-blue-60 { background-color: #91a9ff; }
-.bg-blue-40 { background-color: #bdccff; }
-.bg-blue-20 { background-color: #eaefff; }
-.bg-navy { background-color: #212e5f; }
-.bg-navy-80 { background-color: #7b83a1; }
-.bg-navy-60 { background-color: #9fa6bf; }
-.bg-navy-40 { background-color: #d7dbe7; }
-.bg-navy-20 { background-color: #eff1f9; }
-.bg-green { background-color: #39b54a; }
-.bg-green-light { background-color: #e6ffea; }
+.bg-blue-80 { background-color: #6f8dfd; }
+.bg-blue-60 { background-color: #93aafd; }
+.bg-blue-40 { background-color: #b7c6fe; }
+.bg-blue-20 { background-color: #dbe3fe; }
+.bg-navy { background-color: #545a70; }
+.bg-navy-80 { background-color: #767b8d; }
+.bg-navy-60 { background-color: #989ca9; }
+.bg-navy-40 { background-color: #bbbdc6; }
+.bg-navy-20 { background-color: #dddee2; }
+.bg-green { background-color: #7ed321; }
+.bg-green-light { background-color: #f8fdf4; }
 .bg-yellow { background-color: #ffa721; }
-.bg-yellow-light { background-color: #fff7e4; }
+.bg-yellow-light { background-color: #fffaf4; }
 .bg-red { background-color: #ff3d44; }
-.bg-red-light { background-color: #ffe8e8; }
+.bg-red-light { background-color: #fff5f5; }
 .bg-black { background-color: #000; }
 .bg-white { background-color: #fff; }
 .bg-black-20 { background-color: rgba( 0, 0, 0, .20 ); }
@@ -582,21 +582,21 @@
 .bg-white-90 { background-color: rgba( 255, 255, 255, .90 ); }
 .bg-transparent { background-color: transparent; }
 .blue { color: #4b71fc; }
-.blue-80 { color: #708fff; }
-.blue-60 { color: #91a9ff; }
-.blue-40 { color: #bdccff; }
-.blue-20 { color: #eaefff; }
-.navy { color: #212e5f; }
-.navy-80 { color: #7b83a1; }
-.navy-60 { color: #9fa6bf; }
-.navy-40 { color: #d7dbe7; }
-.navy-20 { color: #eff1f9; }
-.green { color: #39b54a; }
-.green-light { color: #e6ffea; }
+.blue-80 { color: #6f8dfd; }
+.blue-60 { color: #93aafd; }
+.blue-40 { color: #b7c6fe; }
+.blue-20 { color: #dbe3fe; }
+.navy { color: #545a70; }
+.navy-80 { color: #767b8d; }
+.navy-60 { color: #989ca9; }
+.navy-40 { color: #bbbdc6; }
+.navy-20 { color: #dddee2; }
+.green { color: #7ed321; }
+.green-light { color: #f8fdf4; }
 .yellow { color: #ffa721; }
-.yellow-light { color: #fff7e4; }
+.yellow-light { color: #fffaf4; }
 .red { color: #ff3d44; }
-.red-light { color: #ffe8e8; }
+.red-light { color: #fff5f5; }
 .black { color: #000; }
 .white { color: #fff; }
 .black-20 { color: rgba( 0, 0, 0, .20 ); }
@@ -616,96 +616,96 @@
 .hover-bg-blue:hover { background-color: #4b71fc; }
 .hover-b--blue:focus { border-color: #4b71fc; }
 .hover-b--blue:hover { border-color: #4b71fc; }
-.hover-blue-80:focus { color: #708fff; }
-.hover-blue-80:hover { color: #708fff; }
-.hover-bg-blue-80:focus { background-color: #708fff; }
-.hover-bg-blue-80:hover { background-color: #708fff; }
-.hover-b--blue-80:focus { border-color: #708fff; }
-.hover-b--blue-80:hover { border-color: #708fff; }
-.hover-blue-60:focus { color: #91a9ff; }
-.hover-blue-60:hover { color: #91a9ff; }
-.hover-bg-blue-60:focus { background-color: #91a9ff; }
-.hover-bg-blue-60:hover { background-color: #91a9ff; }
-.hover-b--blue-60:focus { border-color: #91a9ff; }
-.hover-b--blue-60:hover { border-color: #91a9ff; }
-.hover-blue-40:focus { color: #bdccff; }
-.hover-blue-40:hover { color: #bdccff; }
-.hover-bg-blue-40:focus { background-color: #bdccff; }
-.hover-bg-blue-40:hover { background-color: #bdccff; }
-.hover-b--blue-40:focus { border-color: #bdccff; }
-.hover-b--blue-40:hover { border-color: #bdccff; }
-.hover-blue-20:focus { color: #eaefff; }
-.hover-blue-20:hover { color: #eaefff; }
-.hover-bg-blue-20:focus { background-color: #eaefff; }
-.hover-bg-blue-20:hover { background-color: #eaefff; }
-.hover-b--blue-20:focus { border-color: #eaefff; }
-.hover-b--blue-20:hover { border-color: #eaefff; }
-.hover-navy:focus { color: #212e5f; }
-.hover-navy:hover { color: #212e5f; }
-.hover-bg-navy:focus { background-color: #212e5f; }
-.hover-bg-navy:hover { background-color: #212e5f; }
-.hover-b--navy:focus { border-color: #212e5f; }
-.hover-b--navy:hover { border-color: #212e5f; }
-.hover-navy-80:focus { color: #7b83a1; }
-.hover-navy-80:hover { color: #7b83a1; }
-.hover-bg-navy-80:focus { background-color: #7b83a1; }
-.hover-bg-navy-80:hover { background-color: #7b83a1; }
-.hover-b--navy-80:focus { border-color: #7b83a1; }
-.hover-b--navy-80:hover { border-color: #7b83a1; }
-.hover-navy-60:focus { color: #9fa6bf; }
-.hover-navy-60:hover { color: #9fa6bf; }
-.hover-bg-navy-60:focus { background-color: #9fa6bf; }
-.hover-bg-navy-60:hover { background-color: #9fa6bf; }
-.hover-b--navy-60:focus { border-color: #9fa6bf; }
-.hover-b--navy-60:hover { border-color: #9fa6bf; }
-.hover-navy-40:focus { color: #d7dbe7; }
-.hover-navy-40:hover { color: #d7dbe7; }
-.hover-bg-navy-40:focus { background-color: #d7dbe7; }
-.hover-bg-navy-40:hover { background-color: #d7dbe7; }
-.hover-b--navy-40:focus { border-color: #d7dbe7; }
-.hover-b--navy-40:hover { border-color: #d7dbe7; }
-.hover-navy-20:focus { color: #eff1f9; }
-.hover-navy-20:hover { color: #eff1f9; }
-.hover-bg-navy-20:focus { background-color: #eff1f9; }
-.hover-bg-navy-20:hover { background-color: #eff1f9; }
-.hover-b--navy-20:focus { border-color: #eff1f9; }
-.hover-b--navy-20:hover { border-color: #eff1f9; }
-.hover-green:focus { color: #39b54a; }
-.hover-green:hover { color: #39b54a; }
-.hover-bg-green:focus { background-color: #39b54a; }
-.hover-bg-green:hover { background-color: #39b54a; }
-.hover-b--green:focus { border-color: #39b54a; }
-.hover-b--green:hover { border-color: #39b54a; }
-.hover-green-light:focus { color: #e6ffea; }
-.hover-green-light:hover { color: #e6ffea; }
-.hover-bg-green-light:focus { background-color: #e6ffea; }
-.hover-bg-green-light:hover { background-color: #e6ffea; }
-.hover-b--green-light:focus { border-color: #e6ffea; }
-.hover-b--green-light:hover { border-color: #e6ffea; }
+.hover-blue-80:focus { color: #6f8dfd; }
+.hover-blue-80:hover { color: #6f8dfd; }
+.hover-bg-blue-80:focus { background-color: #6f8dfd; }
+.hover-bg-blue-80:hover { background-color: #6f8dfd; }
+.hover-b--blue-80:focus { border-color: #6f8dfd; }
+.hover-b--blue-80:hover { border-color: #6f8dfd; }
+.hover-blue-60:focus { color: #93aafd; }
+.hover-blue-60:hover { color: #93aafd; }
+.hover-bg-blue-60:focus { background-color: #93aafd; }
+.hover-bg-blue-60:hover { background-color: #93aafd; }
+.hover-b--blue-60:focus { border-color: #93aafd; }
+.hover-b--blue-60:hover { border-color: #93aafd; }
+.hover-blue-40:focus { color: #b7c6fe; }
+.hover-blue-40:hover { color: #b7c6fe; }
+.hover-bg-blue-40:focus { background-color: #b7c6fe; }
+.hover-bg-blue-40:hover { background-color: #b7c6fe; }
+.hover-b--blue-40:focus { border-color: #b7c6fe; }
+.hover-b--blue-40:hover { border-color: #b7c6fe; }
+.hover-blue-20:focus { color: #dbe3fe; }
+.hover-blue-20:hover { color: #dbe3fe; }
+.hover-bg-blue-20:focus { background-color: #dbe3fe; }
+.hover-bg-blue-20:hover { background-color: #dbe3fe; }
+.hover-b--blue-20:focus { border-color: #dbe3fe; }
+.hover-b--blue-20:hover { border-color: #dbe3fe; }
+.hover-navy:focus { color: #545a70; }
+.hover-navy:hover { color: #545a70; }
+.hover-bg-navy:focus { background-color: #545a70; }
+.hover-bg-navy:hover { background-color: #545a70; }
+.hover-b--navy:focus { border-color: #545a70; }
+.hover-b--navy:hover { border-color: #545a70; }
+.hover-navy-80:focus { color: #767b8d; }
+.hover-navy-80:hover { color: #767b8d; }
+.hover-bg-navy-80:focus { background-color: #767b8d; }
+.hover-bg-navy-80:hover { background-color: #767b8d; }
+.hover-b--navy-80:focus { border-color: #767b8d; }
+.hover-b--navy-80:hover { border-color: #767b8d; }
+.hover-navy-60:focus { color: #989ca9; }
+.hover-navy-60:hover { color: #989ca9; }
+.hover-bg-navy-60:focus { background-color: #989ca9; }
+.hover-bg-navy-60:hover { background-color: #989ca9; }
+.hover-b--navy-60:focus { border-color: #989ca9; }
+.hover-b--navy-60:hover { border-color: #989ca9; }
+.hover-navy-40:focus { color: #bbbdc6; }
+.hover-navy-40:hover { color: #bbbdc6; }
+.hover-bg-navy-40:focus { background-color: #bbbdc6; }
+.hover-bg-navy-40:hover { background-color: #bbbdc6; }
+.hover-b--navy-40:focus { border-color: #bbbdc6; }
+.hover-b--navy-40:hover { border-color: #bbbdc6; }
+.hover-navy-20:focus { color: #dddee2; }
+.hover-navy-20:hover { color: #dddee2; }
+.hover-bg-navy-20:focus { background-color: #dddee2; }
+.hover-bg-navy-20:hover { background-color: #dddee2; }
+.hover-b--navy-20:focus { border-color: #dddee2; }
+.hover-b--navy-20:hover { border-color: #dddee2; }
+.hover-green:focus { color: #7ed321; }
+.hover-green:hover { color: #7ed321; }
+.hover-bg-green:focus { background-color: #7ed321; }
+.hover-bg-green:hover { background-color: #7ed321; }
+.hover-b--green:focus { border-color: #7ed321; }
+.hover-b--green:hover { border-color: #7ed321; }
+.hover-green-light:focus { color: #f8fdf4; }
+.hover-green-light:hover { color: #f8fdf4; }
+.hover-bg-green-light:focus { background-color: #f8fdf4; }
+.hover-bg-green-light:hover { background-color: #f8fdf4; }
+.hover-b--green-light:focus { border-color: #f8fdf4; }
+.hover-b--green-light:hover { border-color: #f8fdf4; }
 .hover-yellow:focus { color: #ffa721; }
 .hover-yellow:hover { color: #ffa721; }
 .hover-bg-yellow:focus { background-color: #ffa721; }
 .hover-bg-yellow:hover { background-color: #ffa721; }
 .hover-b--yellow:focus { border-color: #ffa721; }
 .hover-b--yellow:hover { border-color: #ffa721; }
-.hover-yellow-light:focus { color: #fff7e4; }
-.hover-yellow-light:hover { color: #fff7e4; }
-.hover-bg-yellow-light:focus { background-color: #fff7e4; }
-.hover-bg-yellow-light:hover { background-color: #fff7e4; }
-.hover-b--yellow-light:focus { border-color: #fff7e4; }
-.hover-b--yellow-light:hover { border-color: #fff7e4; }
+.hover-yellow-light:focus { color: #fffaf4; }
+.hover-yellow-light:hover { color: #fffaf4; }
+.hover-bg-yellow-light:focus { background-color: #fffaf4; }
+.hover-bg-yellow-light:hover { background-color: #fffaf4; }
+.hover-b--yellow-light:focus { border-color: #fffaf4; }
+.hover-b--yellow-light:hover { border-color: #fffaf4; }
 .hover-red:focus { color: #ff3d44; }
 .hover-red:hover { color: #ff3d44; }
 .hover-bg-red:focus { background-color: #ff3d44; }
 .hover-bg-red:hover { background-color: #ff3d44; }
 .hover-b--red:focus { border-color: #ff3d44; }
 .hover-b--red:hover { border-color: #ff3d44; }
-.hover-red-light:focus { color: #ffe8e8; }
-.hover-red-light:hover { color: #ffe8e8; }
-.hover-bg-red-light:focus { background-color: #ffe8e8; }
-.hover-bg-red-light:hover { background-color: #ffe8e8; }
-.hover-b--red-light:focus { border-color: #ffe8e8; }
-.hover-b--red-light:hover { border-color: #ffe8e8; }
+.hover-red-light:focus { color: #fff5f5; }
+.hover-red-light:hover { color: #fff5f5; }
+.hover-bg-red-light:focus { background-color: #fff5f5; }
+.hover-bg-red-light:hover { background-color: #fff5f5; }
+.hover-b--red-light:focus { border-color: #fff5f5; }
+.hover-b--red-light:hover { border-color: #fff5f5; }
 .hover-black:focus { color: #000; }
 .hover-black:hover { color: #000; }
 .hover-bg-black:focus { background-color: #000; }
@@ -979,21 +979,21 @@
 .g-w15 { width: 16rem; }
 .z-6 { z-index: 6; }
 .blue { color: #4b71fc; }
-.blue-80 { color: #708fff; }
-.blue-60 { color: #91a9ff; }
-.blue-40 { color: #bdccff; }
-.blue-20 { color: #eaefff; }
-.navy { color: #212e5f; }
-.navy-80 { color: #7b83a1; }
-.navy-60 { color: #9fa6bf; }
-.navy-40 { color: #d7dbe7; }
-.navy-20 { color: #eff1f9; }
-.green { color: #39b54a; }
-.green-light { color: #e6ffea; }
+.blue-80 { color: #6f8dfd; }
+.blue-60 { color: #93aafd; }
+.blue-40 { color: #b7c6fe; }
+.blue-20 { color: #dbe3fe; }
+.navy { color: #545a70; }
+.navy-80 { color: #767b8d; }
+.navy-60 { color: #989ca9; }
+.navy-40 { color: #bbbdc6; }
+.navy-20 { color: #dddee2; }
+.green { color: #7ed321; }
+.green-light { color: #f8fdf4; }
 .yellow { color: #ffa721; }
-.yellow-light { color: #fff7e4; }
+.yellow-light { color: #fffaf4; }
 .red { color: #ff3d44; }
-.red-light { color: #ffe8e8; }
+.red-light { color: #fff5f5; }
 .black { color: #000; }
 .white { color: #fff; }
 .black-20 { color: rgba( 0, 0, 0, .20 ); }
