Fix color navy-20

--- a/src/_colors.css
+++ b/src/_colors.css
@@ -9,7 +9,7 @@
 --navy-80: #767B8D;
 --navy-60: #989CA9;
 --navy-40: #BBBDC6;
---navy-20: #DDDEE2;
+--navy-20: #F9FAFC;
 --green: #7ED321;
 --green-light: #F8FDF4;
 --yellow: #FFA721;
