Update name of colors

--- a/tachyons.css
+++ b/tachyons.css
@@ -22,11 +22,29 @@
  *
  */
 /* External Library Includes */
+.bg-base-1 { background-color: #fff; }
+.bg-base-2 { background-color: #f9fafc; }
+.bg-base-3 { background-color: #e7e9f0; }
+.bg-base-4 { background-color: #d7dbe7; }
+.bg-base-inverted-1 { background-color: #545a70; }
+.bg-base-inverted-2 { background-color: #6d7285; }
+.bg-primary { background-color: #4b71fc; }
+.bg-success { background-color: #7ed321; }
+.bg-light-success { background-color: #f8fdf4; }
+.bg-danger { background-color: #ff3d44; }
+.bg-light-danger { background-color: #fff5f5; }
+.bg-warning { background-color: #ffa721; }
+.bg-light-warning { background-color: #fffaf4; }
+.bg-on-base-1 { background-color: #212e5f; }
+.bg-on-base-2 { background-color: #7b83a1; }
+.bg-on-base-inverted-1 { background-color: #fff; }
+.bg-on-base-inverted-2 { background-color: #fff; }
 .bg-blue { background-color: #4b71fc; }
 .bg-blue-80 { background-color: #6f8dfd; }
 .bg-blue-60 { background-color: #93aafd; }
 .bg-blue-40 { background-color: #b7c6fe; }
 .bg-blue-20 { background-color: #dbe3fe; }
+.bg-dark-blue { background-color: #212e5f; }
 .bg-navy { background-color: #545a70; }
 .bg-navy-80 { background-color: #767b8d; }
 .bg-navy-60 { background-color: #989ca9; }
@@ -51,11 +69,29 @@
 .bg-white-80 { background-color: rgba( 255, 255, 255, .80 ); }
 .bg-white-90 { background-color: rgba( 255, 255, 255, .90 ); }
 .bg-transparent { background-color: transparent; }
+.b--base-1 { border-color: #fff; }
+.b--base-2 { border-color: #f9fafc; }
+.b--base-3 { border-color: #e7e9f0; }
+.b--base-4 { border-color: #d7dbe7; }
+.b--base-inverted-1 { border-color: #545a70; }
+.b--base-inverted-2 { border-color: #6d7285; }
+.b--primary { border-color: #4b71fc; }
+.b--success { border-color: #7ed321; }
+.b--light-success { border-color: #f8fdf4; }
+.b--danger { border-color: #ff3d44; }
+.b--light-danger { border-color: #fff5f5; }
+.b--warning { border-color: #ffa721; }
+.b--light-warning { border-color: #fffaf4; }
+.b--on-base-1 { border-color: #212e5f; }
+.b--on-base-2 { border-color: #7b83a1; }
+.b--on-base-inverted-1 { border-color: #fff; }
+.b--on-base-inverted-2 { border-color: #fff; }
 .b--blue { border-color: #4b71fc; }
 .b--blue-80 { border-color: #6f8dfd; }
 .b--blue-60 { border-color: #93aafd; }
 .b--blue-40 { border-color: #b7c6fe; }
 .b--blue-20 { border-color: #dbe3fe; }
+.b--dark-blue { border-color: #212e5f; }
 .b--navy { border-color: #545a70; }
 .b--navy-80 { border-color: #767b8d; }
 .b--navy-60 { border-color: #989ca9; }
@@ -83,11 +119,29 @@
 .shadow-1 { box-shadow: 0 0 5px 0 rgba( 31, 46, 95, .08 ); }
 .shadow-2 { box-shadow: 0 0 10px 2px rgba( 31, 46, 95, .08 ); }
 .shadow-3 { box-shadow: -5px 0 30px 0 rgba( 31, 46, 95, .08 ); }
+.base-1 { color: #fff; }
+.base-2 { color: #f9fafc; }
+.base-3 { color: #e7e9f0; }
+.base-4 { color: #d7dbe7; }
+.base-inverted-1 { color: #545a70; }
+.base-inverted-2 { color: #6d7285; }
+.primary { color: #4b71fc; }
+.success { color: #7ed321; }
+.light-success { color: #f8fdf4; }
+.danger { color: #ff3d44; }
+.light-danger { color: #fff5f5; }
+.warning { color: #ffa721; }
+.light-warning { color: #fffaf4; }
+.on-base-1 { color: #212e5f; }
+.on-base-2 { color: #7b83a1; }
+.on-base-inverted-1 { color: #fff; }
+.on-base-inverted-2 { color: #fff; }
 .blue { color: #4b71fc; }
 .blue-80 { color: #6f8dfd; }
 .blue-60 { color: #93aafd; }
 .blue-40 { color: #b7c6fe; }
 .blue-20 { color: #dbe3fe; }
+.dark-blue { color: #212e5f; }
 .navy { color: #545a70; }
 .navy-80 { color: #767b8d; }
 .navy-60 { color: #989ca9; }
@@ -552,11 +606,29 @@
 .g-h13 { height: 5rem; }
 .g-h14 { height: 8rem; }
 .g-h15 { height: 16rem; }
+.bg-base-1 { background-color: #fff; }
+.bg-base-2 { background-color: #f9fafc; }
+.bg-base-3 { background-color: #e7e9f0; }
+.bg-base-4 { background-color: #d7dbe7; }
+.bg-base-inverted-1 { background-color: #545a70; }
+.bg-base-inverted-2 { background-color: #6d7285; }
+.bg-primary { background-color: #4b71fc; }
+.bg-success { background-color: #7ed321; }
+.bg-light-success { background-color: #f8fdf4; }
+.bg-danger { background-color: #ff3d44; }
+.bg-light-danger { background-color: #fff5f5; }
+.bg-warning { background-color: #ffa721; }
+.bg-light-warning { background-color: #fffaf4; }
+.bg-on-base-1 { background-color: #212e5f; }
+.bg-on-base-2 { background-color: #7b83a1; }
+.bg-on-base-inverted-1 { background-color: #fff; }
+.bg-on-base-inverted-2 { background-color: #fff; }
 .bg-blue { background-color: #4b71fc; }
 .bg-blue-80 { background-color: #6f8dfd; }
 .bg-blue-60 { background-color: #93aafd; }
 .bg-blue-40 { background-color: #b7c6fe; }
 .bg-blue-20 { background-color: #dbe3fe; }
+.bg-dark-blue { background-color: #212e5f; }
 .bg-navy { background-color: #545a70; }
 .bg-navy-80 { background-color: #767b8d; }
 .bg-navy-60 { background-color: #989ca9; }
@@ -581,11 +653,29 @@
 .bg-white-80 { background-color: rgba( 255, 255, 255, .80 ); }
 .bg-white-90 { background-color: rgba( 255, 255, 255, .90 ); }
 .bg-transparent { background-color: transparent; }
+.base-1 { color: #fff; }
+.base-2 { color: #f9fafc; }
+.base-3 { color: #e7e9f0; }
+.base-4 { color: #d7dbe7; }
+.base-inverted-1 { color: #545a70; }
+.base-inverted-2 { color: #6d7285; }
+.primary { color: #4b71fc; }
+.success { color: #7ed321; }
+.light-success { color: #f8fdf4; }
+.danger { color: #ff3d44; }
+.light-danger { color: #fff5f5; }
+.warning { color: #ffa721; }
+.light-warning { color: #fffaf4; }
+.on-base-1 { color: #212e5f; }
+.on-base-2 { color: #7b83a1; }
+.on-base-inverted-1 { color: #fff; }
+.on-base-inverted-2 { color: #fff; }
 .blue { color: #4b71fc; }
 .blue-80 { color: #6f8dfd; }
 .blue-60 { color: #93aafd; }
 .blue-40 { color: #b7c6fe; }
 .blue-20 { color: #dbe3fe; }
+.dark-blue { color: #212e5f; }
 .navy { color: #545a70; }
 .navy-80 { color: #767b8d; }
 .navy-60 { color: #989ca9; }
@@ -610,6 +700,108 @@
 .white-80 { color: rgba( 255, 255, 255, .80 ); }
 .white-90 { color: rgba( 255, 255, 255, .90 ); }
 .transparent { color: transparent; }
+.hover-base-1:focus { color: #fff; }
+.hover-base-1:hover { color: #fff; }
+.hover-bg-base-1:focus { background-color: #fff; }
+.hover-bg-base-1:hover { background-color: #fff; }
+.hover-b--base-1:focus { border-color: #fff; }
+.hover-b--base-1:hover { border-color: #fff; }
+.hover-base-2:focus { color: #f9fafc; }
+.hover-base-2:hover { color: #f9fafc; }
+.hover-bg-base-2:focus { background-color: #f9fafc; }
+.hover-bg-base-2:hover { background-color: #f9fafc; }
+.hover-b--base-2:focus { border-color: #f9fafc; }
+.hover-b--base-2:hover { border-color: #f9fafc; }
+.hover-base-3:focus { color: #e7e9f0; }
+.hover-base-3:hover { color: #e7e9f0; }
+.hover-bg-base-3:focus { background-color: #e7e9f0; }
+.hover-bg-base-3:hover { background-color: #e7e9f0; }
+.hover-b--base-3:focus { border-color: #e7e9f0; }
+.hover-b--base-3:hover { border-color: #e7e9f0; }
+.hover-base-4:focus { color: #d7dbe7; }
+.hover-base-4:hover { color: #d7dbe7; }
+.hover-bg-base-4:focus { background-color: #d7dbe7; }
+.hover-bg-base-4:hover { background-color: #d7dbe7; }
+.hover-b--base-4:focus { border-color: #d7dbe7; }
+.hover-b--base-4:hover { border-color: #d7dbe7; }
+.hover-base-inverted-1:focus { color: #545a70; }
+.hover-base-inverted-1:hover { color: #545a70; }
+.hover-bg-base-inverted-1:focus { background-color: #545a70; }
+.hover-bg-base-inverted-1:hover { background-color: #545a70; }
+.hover-b--base-inverted-1:focus { border-color: #545a70; }
+.hover-b--base-inverted-1:hover { border-color: #545a70; }
+.hover-base-inverted-2:focus { color: #6d7285; }
+.hover-base-inverted-2:hover { color: #6d7285; }
+.hover-bg-base-inverted-2:focus { background-color: #6d7285; }
+.hover-bg-base-inverted-2:hover { background-color: #6d7285; }
+.hover-b--base-inverted-2:focus { border-color: #6d7285; }
+.hover-b--base-inverted-2:hover { border-color: #6d7285; }
+.hover-primary:focus { color: #4b71fc; }
+.hover-primary:hover { color: #4b71fc; }
+.hover-bg-primary:focus { background-color: #4b71fc; }
+.hover-bg-primary:hover { background-color: #4b71fc; }
+.hover-b--primary:focus { border-color: #4b71fc; }
+.hover-b--primary:hover { border-color: #4b71fc; }
+.hover-success:focus { color: #7ed321; }
+.hover-success:hover { color: #7ed321; }
+.hover-bg-success:focus { background-color: #7ed321; }
+.hover-bg-success:hover { background-color: #7ed321; }
+.hover-b--success:focus { border-color: #7ed321; }
+.hover-b--success:hover { border-color: #7ed321; }
+.hover-light-success:focus { color: #f8fdf4; }
+.hover-light-success:hover { color: #f8fdf4; }
+.hover-bg-light-success:focus { background-color: #f8fdf4; }
+.hover-bg-light-success:hover { background-color: #f8fdf4; }
+.hover-b--light-success:focus { border-color: #f8fdf4; }
+.hover-b--light-success:hover { border-color: #f8fdf4; }
+.hover-danger:focus { color: #ff3d44; }
+.hover-danger:hover { color: #ff3d44; }
+.hover-bg-danger:focus { background-color: #ff3d44; }
+.hover-bg-danger:hover { background-color: #ff3d44; }
+.hover-b--danger:focus { border-color: #ff3d44; }
+.hover-b--danger:hover { border-color: #ff3d44; }
+.hover-light-danger:focus { color: #fff5f5; }
+.hover-light-danger:hover { color: #fff5f5; }
+.hover-bg-light-danger:focus { background-color: #fff5f5; }
+.hover-bg-light-danger:hover { background-color: #fff5f5; }
+.hover-b--light-danger:focus { border-color: #fff5f5; }
+.hover-b--light-danger:hover { border-color: #fff5f5; }
+.hover-warning:focus { color: #ffa721; }
+.hover-warning:hover { color: #ffa721; }
+.hover-bg-warning:focus { background-color: #ffa721; }
+.hover-bg-warning:hover { background-color: #ffa721; }
+.hover-b--warning:focus { border-color: #ffa721; }
+.hover-b--warning:hover { border-color: #ffa721; }
+.hover-light-warning:focus { color: #fffaf4; }
+.hover-light-warning:hover { color: #fffaf4; }
+.hover-bg-light-warning:focus { background-color: #fffaf4; }
+.hover-bg-light-warning:hover { background-color: #fffaf4; }
+.hover-b--light-warning:focus { border-color: #fffaf4; }
+.hover-b--light-warning:hover { border-color: #fffaf4; }
+.hover-on-base-1:focus { color: #212e5f; }
+.hover-on-base-1:hover { color: #212e5f; }
+.hover-bg-on-base-1:focus { background-color: #212e5f; }
+.hover-bg-on-base-1:hover { background-color: #212e5f; }
+.hover-b--on-base-1:focus { border-color: #212e5f; }
+.hover-b--on-base-1:hover { border-color: #212e5f; }
+.hover-on-base-2:focus { color: #7b83a1; }
+.hover-on-base-2:hover { color: #7b83a1; }
+.hover-bg-on-base-2:focus { background-color: #7b83a1; }
+.hover-bg-on-base-2:hover { background-color: #7b83a1; }
+.hover-b--on-base-2:focus { border-color: #7b83a1; }
+.hover-b--on-base-2:hover { border-color: #7b83a1; }
+.hover-on-base-inverted-1:focus { color: #fff; }
+.hover-on-base-inverted-1:hover { color: #fff; }
+.hover-bg-on-base-inverted-1:focus { background-color: #fff; }
+.hover-bg-on-base-inverted-1:hover { background-color: #fff; }
+.hover-b--on-base-inverted-1:focus { border-color: #fff; }
+.hover-b--on-base-inverted-1:hover { border-color: #fff; }
+.hover-on-base-inverted-2:focus { color: #fff; }
+.hover-on-base-inverted-2:hover { color: #fff; }
+.hover-bg-on-base-inverted-2:focus { background-color: #fff; }
+.hover-bg-on-base-inverted-2:hover { background-color: #fff; }
+.hover-b--on-base-inverted-2:focus { border-color: #fff; }
+.hover-b--on-base-inverted-2:hover { border-color: #fff; }
 .hover-blue:focus { color: #4b71fc; }
 .hover-blue:hover { color: #4b71fc; }
 .hover-bg-blue:focus { background-color: #4b71fc; }
@@ -640,6 +832,12 @@
 .hover-bg-blue-20:hover { background-color: #dbe3fe; }
 .hover-b--blue-20:focus { border-color: #dbe3fe; }
 .hover-b--blue-20:hover { border-color: #dbe3fe; }
+.hover-dark-blue:focus { color: #212e5f; }
+.hover-dark-blue:hover { color: #212e5f; }
+.hover-bg-dark-blue:focus { background-color: #212e5f; }
+.hover-bg-dark-blue:hover { background-color: #212e5f; }
+.hover-b--dark-blue:focus { border-color: #212e5f; }
+.hover-b--dark-blue:hover { border-color: #212e5f; }
 .hover-navy:focus { color: #545a70; }
 .hover-navy:hover { color: #545a70; }
 .hover-bg-navy:focus { background-color: #545a70; }
@@ -978,11 +1176,29 @@
 .g-w14 { width: 8rem; }
 .g-w15 { width: 16rem; }
 .z-6 { z-index: 6; }
+.base-1 { color: #fff; }
+.base-2 { color: #f9fafc; }
+.base-3 { color: #e7e9f0; }
+.base-4 { color: #d7dbe7; }
+.base-inverted-1 { color: #545a70; }
+.base-inverted-2 { color: #6d7285; }
+.primary { color: #4b71fc; }
+.success { color: #7ed321; }
+.light-success { color: #f8fdf4; }
+.danger { color: #ff3d44; }
+.light-danger { color: #fff5f5; }
+.warning { color: #ffa721; }
+.light-warning { color: #fffaf4; }
+.on-base-1 { color: #212e5f; }
+.on-base-2 { color: #7b83a1; }
+.on-base-inverted-1 { color: #fff; }
+.on-base-inverted-2 { color: #fff; }
 .blue { color: #4b71fc; }
 .blue-80 { color: #6f8dfd; }
 .blue-60 { color: #93aafd; }
 .blue-40 { color: #b7c6fe; }
 .blue-20 { color: #dbe3fe; }
+.dark-blue { color: #212e5f; }
 .navy { color: #545a70; }
 .navy-80 { color: #767b8d; }
 .navy-60 { color: #989ca9; }
